# Todo-Flask-Pytest-project

./: README.md  app.py  pyproject.toml  report.html
tests/: conftest.py  test_api.py
