[project]
name = "myflask-todo-api"
version = "0.1.0"
description = ""
authors = [
    {name = "lakshmi"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-smorest (>=0.47.0,<0.48.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
